--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.4.0",
     "file-saver": "^1.3.3",
+    "ssri": "^5.2.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-slider-component": "^2.4.7",
-    "ssri": "^5.2.2"
+    "vue-slider-component": "^2.4.7"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
@@ -29,7 +29,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
@@ -46,6 +46,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "style-loader": "^0.20.2",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "to-string-loader": "^1.1.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
