--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Écouter la radio en ligne",
-  "short_name": "Radio-App",
+  "short_name": "Vue-Radio",
   "icons": [{
     "src": "/static/logo/logo-120.png",
     "sizes": "120x120",
