--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.4.0",
+    "compression-webpack-plugin": "^1.1.11",
     "file-saver": "^1.3.3",
     "ssri": "^5.2.2",
     "vue": "^2.5.2",
