--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,31 @@
   "name": "Écouter la radio en ligne",
   "short_name": "Vue-Radio",
   "icons": [{
-    "src": "/static/logo/logo-120.png",
+    "src": "static/logo/logo-120.png",
     "sizes": "120x120",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-144.png",
+    "src": "static/logo/logo-144.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-152.png",
+    "src": "static/logo/logo-152.png",
     "sizes": "152x152",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-192.png",
+    "src": "static/logo/logo-192.png",
     "sizes": "192x192",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-256.png",
+    "src": "static/logo/logo-256.png",
     "sizes": "256x256",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-384.png",
+    "src": "static/logo/logo-384.png",
     "sizes": "384x384",
     "type": "image/png"
   }, {
-    "src": "/static/logo/logo-512.png",
+    "src": "static/logo/logo-512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
